--- a/Netflix.ipynb
+++ b/Netflix.ipynb
@@ -14,7 +14,7 @@
    "id": "d531d357-ef32-4bd0-bd02-9cfde0933ea4",
    "metadata": {},
    "source": [
-    "## <span style=\"color:green\">Perform PRE (EDA)</span>\n",
+    "## <span style=\"color:green\">Perform pre processing</span>\n",
     "## <span style=\"color:green\">Using</span>\n",
     "\n",
     "## 1. Pandas\n",
