--- a/Netflix.ipynb
+++ b/Netflix.ipynb
@@ -32,7 +32,7 @@
     "  - `np.mean()`,`np.median()`, `np.std()`: Calculate basic statistics.\n",
     "- **Installation**: `pip install numpy`\n",
     "## 3. matplotlib & Seaborn\n",
-    "- **purpose**: Data visualization.\n",
+    "- **purpose**: Data visualization and handle outliers.\n",
     "\n",
     "## 4. import warnings\n",
     " - **it helps suppress unnecessary warnings to keep the analysis output clean and focused.**\n",
